--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,36 +1,34 @@
 /**
- * VPM Tooltips
+ * sass-tooltips
  *
- * (c) 2016 Van Patten Media Inc.
+ * (c) 2018 Tomodomo
  *
  * Readme, license, and more information:
- * https://github.com/vanpattenmedia/vpm-tooltips
+ * https://github.com/TomodomoCo/sass-tooltips
  */
 
 
 /**
  * Default variables
  */
+$sass-tooltip--background: black !default;
+$sass-tooltip--text-color: white !default;
 
-$vpm-tooltip--background: black !default;
-$vpm-tooltip--text-color: white !default;
+$sass-tooltip--font-family: inherit !default;
+$sass-tooltip--font-size: inherit !default;
+$sass-tooltip--text-shadow: none !default;
 
-$vpm-tooltip--font-family: inherit !default;
-$vpm-tooltip--font-size: inherit !default;
-$vpm-tooltip--text-shadow: none !default;
+$sass-tooltip--arrow-width: 0.875em !default;
+$sass-tooltip--arrow-height: 0.6em !default;
 
-$vpm-tooltip--arrow-width: 0.875em !default;
-$vpm-tooltip--arrow-height: 0.6em !default;
-
-$vpm-tooltip--border-radius: 2px !default;
-$vpm-tooltip--padding: 0.45em 0.75em !default;
-$vpm-tooltip--z-index: 99 !default;
+$sass-tooltip--border-radius: 2px !default;
+$sass-tooltip--padding: 0.45em 0.75em !default;
+$sass-tooltip--z-index: 99 !default;
 
 
 /**
  * Element base
  */
-
 [data-tip-tl],
 [data-tip-tr],
 [data-tip-tm],
@@ -56,17 +54,17 @@ $vpm-tooltip--z-index: 99 !default;
 
 		// Type & style
 		white-space: nowrap;
-		font-family: $vpm-tooltip--font-family;
-		font-size: $vpm-tooltip--font-size;
-		color: $vpm-tooltip--text-color;
-		background: $vpm-tooltip--background;
-		border-radius: $vpm-tooltip--border-radius;
-		text-shadow: $vpm-tooltip--text-shadow;
+		font-family: $sass-tooltip--font-family;
+		font-size: $sass-tooltip--font-size;
+		color: $sass-tooltip--text-color;
+		background: $sass-tooltip--background;
+		border-radius: $sass-tooltip--border-radius;
+		text-shadow: $sass-tooltip--text-shadow;
 
 		// Position & size
 		position: absolute;
-		z-index: $vpm-tooltip--z-index;
-		padding: $vpm-tooltip--padding;
+		z-index: $sass-tooltip--z-index;
+		padding: $sass-tooltip--padding;
 	}
 
 	// Make tooltip visible on hover
@@ -86,27 +84,26 @@ $vpm-tooltip--z-index: 99 !default;
 /**
  * Arrow pointing down (tooltip above target)
  */
-
 [data-tip-bl],
 [data-tip-br],
 [data-tip-bm] {
 	// Arrow
 	&:before {
-		border-top-color: $vpm-tooltip--background;
+		border-top-color: $sass-tooltip--background;
 		bottom: 100%;
 	}
 
 	// Text container
 	&:after {
 		bottom: 100%;
-		margin-bottom: $vpm-tooltip--arrow-height;
+		margin-bottom: $sass-tooltip--arrow-height;
 	}
 }
 
 [data-tip-bl] {
 	// Arrow
 	&:before {
-		border-width: $vpm-tooltip--arrow-height $vpm-tooltip--arrow-width 0 0;
+		border-width: $sass-tooltip--arrow-height $sass-tooltip--arrow-width 0 0;
 		left: 50%;
 	}
 
@@ -121,7 +118,7 @@ $vpm-tooltip--z-index: 99 !default;
 [data-tip-br] {
 	// Arrow
 	&:before {
-		border-width: $vpm-tooltip--arrow-height 0 0 $vpm-tooltip--arrow-width;
+		border-width: $sass-tooltip--arrow-height 0 0 $sass-tooltip--arrow-width;
 		right: 50%;
 	}
 
@@ -136,9 +133,9 @@ $vpm-tooltip--z-index: 99 !default;
 [data-tip-bm] {
 	// Arrow
 	&:before {
-		border-width: $vpm-tooltip--arrow-height $vpm-tooltip--arrow-width 0;
+		border-width: $sass-tooltip--arrow-height $sass-tooltip--arrow-width 0;
 		left: 50%;
-		margin-left: $vpm-tooltip--arrow-width * -1;
+		margin-left: $sass-tooltip--arrow-width * -1;
 	}
 
 	// Text container
@@ -151,27 +148,26 @@ $vpm-tooltip--z-index: 99 !default;
 /**
  * Arrow pointing up (tooltip below target)
  */
-
 [data-tip-tl],
 [data-tip-tr],
 [data-tip-tm] {
 	// Arrow
 	&:before {
-		border-bottom-color: $vpm-tooltip--background;
+		border-bottom-color: $sass-tooltip--background;
 		top: calc( 100% + 1px );
 	}
 
 	// Text container
 	&:after {
 		top: calc( 100% + 1px );
-		margin-top: $vpm-tooltip--arrow-height;
+		margin-top: $sass-tooltip--arrow-height;
 	}
 }
 
 [data-tip-tl] {
 	// Arrow
 	&:before {
-		border-width: 0 $vpm-tooltip--arrow-width $vpm-tooltip--arrow-height 0;
+		border-width: 0 $sass-tooltip--arrow-width $sass-tooltip--arrow-height 0;
 		left: 50%;
 	}
 
@@ -186,7 +182,7 @@ $vpm-tooltip--z-index: 99 !default;
 [data-tip-tr] {
 	// Arrow
 	&:before {
-		border-width: 0 0 $vpm-tooltip--arrow-height $vpm-tooltip--arrow-width;
+		border-width: 0 0 $sass-tooltip--arrow-height $sass-tooltip--arrow-width;
 		right: 50%;
 	}
 
@@ -201,9 +197,9 @@ $vpm-tooltip--z-index: 99 !default;
 [data-tip-tm] {
 	// Arrow
 	&:before {
-		border-width: 0 $vpm-tooltip--arrow-width $vpm-tooltip--arrow-height;
+		border-width: 0 $sass-tooltip--arrow-width $sass-tooltip--arrow-height;
 		left: 50%;
-		margin-left: $vpm-tooltip--arrow-width * -1;
+		margin-left: $sass-tooltip--arrow-width * -1;
 	}
 
 	// Text container
